apps/gitea/components/istio/istio-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitea
spec:
  hosts:
    - gitea
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: gitea
            port:
              number: 80
  tcp:
    - match:
        - port: 22
      route:
        - destination:
            host: gitea
            port:
              number: 2222
